--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@
 # PYTHON
 # =====================
 backend/venv/
-backend/__pycache__/
+backend/**/__pycache__/
+backend/**/*.pyc
+backend/**/*.pyo
+backend/**/*.pyd
+backend/**/*$py.class
 backend/*.sqlite3
 backend/db.sqlite3
 backend/.env
